@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-10-14T01:46:35Z",
-  "count_outdated" : 235,
-  "uniques_outdated" : 204,
-  "count" : 236,
-  "uniques" : 205,
+  "timestamp" : "2025-02-03T01:05:47Z",
+  "count_outdated" : 236,
+  "uniques_outdated" : 205,
+  "count" : 243,
+  "uniques" : 211,
   "clones" : [
     {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "timestamp": "2025-02-02T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
