@@ -1,11 +1,11 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 7,
+  "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2025-02-02T00:00:00Z",
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
